--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,8 @@
     "noUnusedParameters": true,
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+    "allowJs": true
   },
-  "include": ["src"]
+  "include": ["src/**/*", "src/shims.d.ts"]
 }
